--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ packaging==25.0
 propcache==0.3.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
