--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,7 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-certifi==2025.7.14
-charset-normalizer==3.4.2
-distro==1.9.0
-frozenlist==1.7.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-jiter==0.10.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain-core==0.3.69
-langchain-openai==0.3.28
-langchain-together==0.3.0
-langsmith==0.4.6
-multidict==6.6.3
-openai==1.97.0
-orjson==3.11.0
+iniconfig==2.1.0
 packaging==25.0
-propcache==0.3.2
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.1.1
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.4
-requests-toolbelt==1.0.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.1
 setuptools==78.1.1
-sniffio==1.3.1
-tenacity==9.1.2
-tiktoken==0.9.0
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
 wheel==0.45.1
-yarl==1.20.1
-zstandard==0.23.0
