--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,46 @@
+certifi==2025.7.14
+charset-normalizer==3.4.2
+filelock==3.18.0
+fsspec==2025.7.0
+hf-xet==1.1.5
+huggingface-hub==0.33.4
+idna==3.10
 iniconfig==2.1.0
+Jinja2==3.1.4
+-e git+ssh://git@github.com/lamng3/kromaplus.git@bbd5fe7619d15d9b7fc37bc14896f79ed8f418a0#egg=kromaplus
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
+numpy==2.3.1
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cudnn-cu11==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-nccl-cu11==2.21.5
+nvidia-nvtx-cu11==11.8.86
 packaging==25.0
+pillow==11.0.0
 pluggy==1.6.0
 Pygments==2.19.2
 pytest==8.4.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
 setuptools==78.1.1
+sympy==1.13.3
+tokenizers==0.21.2
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+torchvision==0.22.1+cu118
+tqdm==4.67.1
+transformers==4.53.2
+triton==3.3.1
+typing_extensions==4.14.1
+urllib3==2.5.0
 wheel==0.45.1
