--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ charset-normalizer==3.4.2
 filelock==3.18.0
 fsspec==2025.7.0
 hf-xet==1.1.5
+hf_transfer==0.1.9
 huggingface-hub==0.33.4
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.4
--e git+ssh://git@github.com/lamng3/kromaplus.git@bbd5fe7619d15d9b7fc37bc14896f79ed8f418a0#egg=kromaplus
+-e git+ssh://git@github.com/lamng3/kromaplus.git@0e9acbde1e73c89e146599a4a42393f5d49e836c#egg=kromaplus
 MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.3
